# install_new_computer

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Justfile  Makefile  README.md  README_deprecated.md  alacritty.sh  arch.mk  arch.sh  arch_manjaro.sh  autojump.sh  awesome.sh  bash  bashtop.sh  betterlockscreen.sh  brew.sh  brew_extra.sh  cask.sh  centos.mk  centos.sh  centos8.mk  clean.sh  clipmenu.sh  cloudon.sh  conda.sh  conda_unlink.sh  davmail.sh  debian.mk  docker.sh  docker2.sh  dotfiles.sh  dust.sh  eda.sh  efs.sh  fedora.mk  firenvim.sh  (+92 more)
.github/: release-drafter.yml
.github/workflows/: pages.yml  release-drafter.yml  release.yml  test_code.yml  test_code_conda.yml
arch/: dwm.desktop
bash/: Justfile  Makefile  alacritty.sh  arch.mk  bat.sh  betterlockscreen.sh  brew.sh  cask.sh  clipmenu.sh  colors.sh  debian.mk  debops.sh  docker.sh  dotfiles.sh  element.sh  emoji.sh  fedora.mk  fedora.sh  fish.sh  flameshot.sh  git_config.sh  gitconfig.sh  githubcli2.sh  install  install_luke.sh  install_ubuntu.sh  key.sh  lf.sh  mac.mk  mac.sh  mac2.sh  markdown2doc.sh  module.sh  node.sh  nvim.sh  nvm.sh  rocky.mk  snaps.sh  ssh_copy_key_ed.sh  ssh_create.sh  (+9 more)
bash/cmus/: spotify-dl.sh
bash/dwm/: Makefile
bash/electronics/: qucs.sh
bash/font/: roboto.sh
bash/lib_sh/: requirers.sh
bash/nix/: Makefile
bash/polybar/: Makefile
bash/python/: .gitcli.yml  conda.sh  conda_python311.py  conda_python311.sh  ipy2to3.py  mamba.sh  miniconda.sh  python_install_from_brew.sh  python_packages.sh  python_template.sh  uv.sh
bash/rust/: skim.sh
bash/ssh/: Makefile  ssh_copy_key.sh  ssh_create_simple_key.sh
bash/supervisor/: devpi.conf  supervisord.conf
bash/ultrastar/: ubuntu.sh
bash/vnc/: README.md  centos_dwm.sh  ubuntu_xfce.sh  vnctiger.sh  xstartup_kde
camfr/: camfr.sh
cmus/: .gitignore  cmus-sync.sh
database/: install_ubuntu.sh
deprecated/: software.sh
docker/: README.md
docker/centos/: Makefile  sharehome.sh
docker/fedora/: Dockerfile  Makefile
docs/: Makefile  _config.yml  _toc.yml  api.rst  conf.py  index.rst  install.md  linux.md  mac.md  python.md  windows.md  windows_extra.md
dwm/: .gitignore  Makefile  centos.sh  install.sh  install_dwm_joaquin.sh  install_dwmb_joaquin.sh
electronics/emopt/: Makefile  install.sh
electronics/klayout/: Makefile  config_windows.sh  install.sh  install_debian.sh  install_layermap.sh  install_mac.sh
electronics/lumerical/: Makefile  README.md  libpng.sh
emopt/: Makefile  test.py
flux/: ubuntu.sh
git/: git_centos.sh
i3/: gotbletu.md  luke.md
i3gaps/: ubuntu.sh  ubuntu2.sh
inc/: __init__.py  __main__.py  app.py  cli.py  config.py  run.py
inc/bash/: Makefile  autojump.sh  brew.sh  brew_cask.sh  brew_cask_fun.sh  claude.sh  conda_python311.sh  conda_python312.sh  copilot.sh  debops.sh  dict.sh  dotfiles.sh  fish-plugins.sh  fish.sh  fisher.sh  fzf.sh  gcloud.sh  gdrive.sh  git_config.sh  gmsh.sh  install  install.py  install_debian.sh  install_new_mac.sh  key.sh  klayout.sh  lf.sh  mac_default_clipboard.sh  markdown2doc.sh  nix.sh  nvim.sh  nvm.sh  openemu.sh  rbenv.sh  retroarch.sh  rust.sh  rust_packages.sh  s3.sh  ssh_create_key.sh  sshserver.sh  (+9 more)
inc/linux/: arch.mk  bake.sh  efs_ubuntu.sh  fd.sh  fish-git.sh  git_centos.sh  git_sizer.sh  i3-gaps-deb.sh  re-search.sh  vpn-up.sh  windows.mk  windows.sh
inc/macos/: yabai.sh
inc/python/: .gitignore  conda_update.sh  python310.sh  python_packages.sh  ubuntu_python3.sh
inc/ssh/: ssh_copy_key.sh  ssh_copy_key_old.sh  sshadd.sh
inc/ultrastar/: .gitignore  install.sh  install_mac.sh
ipkiss3/: install_license_server.sh
jupyterlab/: extensions.sh  kernel_install.sh
jupyterlab/extensions/: Makefile  dash.sh  jupytext.sh  vim.sh  widgets.sh
jupyterlab/kernels/: kernel_install.sh  make_envs.sh
keymap/: README.md
klayout/: Makefile  config.sh  config_windows.sh  install.sh  install_layermap.sh  install_mac.sh
klayout/drc/: generic.drc  generic.lydrc
klayout/gds3xtrude/: Makefile  freepdk45.layerstack
klayout/tech/: .gitignore  Makefile  README.md
klayout/xsection/: xsection_planarized.pyxs
lib_sh/: requirers.sh
lumerical/: .gitignore  Makefile  README.md  arch.sh  arch_deps.sh  libpng.sh  libpng2.sh  python.sh
meep/: Makefile  install_meep.sh  install_meep_arch.sh  install_meep_arch2.sh  install_meep_source.sh  meep.sh  meep2.sh  meep3.sh
nix/: jupyterhub.nix
pipenv/: ubuntu.sh
python/: .gitcli.yml  conda.sh  convert_python_notebooks_2to3.sh  ipy2to3.py  pip.conf  pip.sh  pipx.sh  pyenv.sh  pyenv2.sh  pyenv_installer.sh  python_install_from_brew.sh
servers/: cloudron_server.sh  code-server.sh  mattermost.sh  sandstorm.sh
servers/devpi/: deploy.sh  docker.sh  systemd.conf
servers/gitlab/: .python-gitlab.cfg  ganttlab.md  registry.md
servers/hackmd/: README.md  docker-compose.yml  map_users.sh
servers/jenkins/: README.md  install.sh  nginx_for_docker.conf
servers/kubernetes/: eksctl.sh  iam.sh
servers/lutim/: Makefile  README.md
servers/mediaglobin/: README.md
servers/nginx/: README.md  deploy.sh  deploycentos.sh  installubuntu.sh  nginx.conf.centos  nginxbackup.conf
servers/onlyoffice/: inventory
servers/plex/: README.md
servers/pypi/: README.md  install.sh  packages.sh  paste.ini
servers/sharelatex/: README.md  restart.sh  run.sh
servers/terraform/: ubuntu.sh
servers/vpn/: Makefile  README.md
ssh/: Makefile  config.sh  id_rsa.pub  sshd_config_mac
supervisor/: README.md  install.sh  vnc.conf
tests/: test_cli.py
ultrastar/: arch.sh  mac.sh  ubuntu.sh
vnc/: Makefile  centos_xfce.sh  vncserver@:1.service.centos  vncserver@:1.service.j  xstartup_i3  xstartup_xfce
vscodeserver/: Makefile  code-server  config.sh  run.sh
webtop/: Makefile  docker-compose.yml
xonsh/: Makefile
(+254 files in other folders)
